--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <span class="tag">公司官网占位页</span><span class="tag">For Apple Review</span>
 <h1>西咸新区途软科技有限责任公司</h1>
 <p><strong>TURUAN TECHNOLOGY CO., LTD. (XIXIAN NEW AREA)</strong></p>
-<p>我们是一家专注于 iOS 应用与相关服务的技术公司。本页面用于 Apple Developer Program 审核。</p>
+<p>我们是一家专注于应用开发与相关服务的技术公司。</p>
 <div class="meta">
-  <p><strong>统一社会信用代码：</strong>（填你公司18位代码）</p>
-  <p><strong>注册地址：</strong>（与营业执照一致）</p>
+  <p><strong>统一社会信用代码：</strong>91611105MABP5MR335</p>
+  <p><strong>注册地址：</strong>陕西省西咸新区沣东新城三桥街道红光路10号红光花园B4一单元401</p>
   <p><strong>联系邮箱：</strong><a href="mailto:apple@turuantech.cn">apple@turuantech.cn</a></p>
 </div>
 <p style="margin-top:16px;font-size:13px;color:#718096">© 西咸新区途软科技有限责任公司</p>
