--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   .meta{margin-top:12px;font-size:14px;color:#2d3748}a{color:#2563eb;text-decoration:none}
   .tag{display:inline-block;padding:2px 8px;border-radius:999px;background:#edf2f7;color:#2d3748;font-size:12px;margin-right:6px}
 </style></head><body><div class="wrap"><div class="card">
-<span class="tag">公司官网占位页</span><span class="tag">For Apple Review</span>
+<span class="tag">公司官网</span><span class="tag">TURUAN TECH</span>
 <h1>西咸新区途软科技有限责任公司</h1>
-<p><strong>TURUAN TECHNOLOGY CO., LTD. (XIXIAN NEW AREA)</strong></p>
-<p>我们是一家专注于应用开发与相关服务的技术公司。</p>
+<p><strong>Xixian New District Turuan Technology Co., Ltd.</strong></p>
+<p>一家专注于应用开发与相关服务的技术公司。</p>
 <div class="meta">
   <p><strong>统一社会信用代码：</strong>91611105MABP5MR335</p>
   <p><strong>注册地址：</strong>陕西省西咸新区沣东新城三桥街道红光路10号红光花园B4一单元401</p>
